--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
       <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
   </head>
   <body>
+    <div class='container'>
+      <header>
+        <h1>this is journey page!!</h1>
+      </header>
+    </div>
     <img src='/img/img.png' alt='journey logo'/>
     {{{body}}}
     {{#if showTest}}
@@ -24,5 +29,8 @@
       {{/if}}
       <script>mocha.run();</script>
     {{/if}}
+    <footer>
+      &copy;{{copyrightYear}} Sumin's Journey!
+    </footer>
   </body>
 </html>
